<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fab_margin">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_product"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/view_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"/>

            <TextView
                android:id="@+id/view_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price" />

            <TextView
                android:id="@+id/view_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/fab_margin">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier name field -->
            <TextView
                android:id="@+id/view_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name" />

            <!-- Supplier telephone no. -->
            <TextView
                android:id="@+id/view_supplier_telephone_no"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_telephone_no"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decrease_quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/decrease_quantity"/>

        <Button
            android:id="@+id/increase_quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/increase_quantity"/>
    </LinearLayout>

    <Button
        android:id="@+id/call_supplier"
        android:padding="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_supplier"
        android:layout_gravity="center"/>

</LinearLayout>